feat: add analytics tracker script and VITE_AW_ACCOUNT_ID env var

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script defer data-account="%VITE_AW_ACCOUNT_ID%" src="https://app.alphaweb.ai/t/aw.js"></script>
   </body>
 </html>
